# spl

./: TextTerm.h  TextTerminal.cpp  Win32AnsiConsole.cpp  WinRegKey.cpp  cleanwindows.h  spl.sln
libspl/: AUTHORS  LICENCE.PCRE  MajicNumberList.txt  Makefile  Makefile.in  Makefile.indeb  Makefile2  Makefile3  Makefile4  NEWS  TODO  buildit  buildit.c  configure  makegcov.sh  spl.cproj  spl.vcxproj  spl.vcxproj.filters  splUnitTests.vcxproj  testdeb.cpp  testit  testit.cpp
libspl/.deps/: RunTestsMain-RunTestsMain.Po  testit-testit.Po
libspl/bas/: BasInterp.cpp  BasInterp.h  BasLex.cpp  BasLex.h  LineBASIC64_BNF.txt  Tokens.h  bas.y
libspl/debug/: vc142.idb
libspl/docs/: quickref.html
libspl/spl/: BigInteger.h  Char.h  Compare.h  Convert.h  Date.h  DateTime.h  Debug.h  Decimal.h  Delegate.h  DelegateDispatch.h  Double.h  Environment.h  Exception.h  GUID.h  IConvertable.h  IIterator.h  IVariant.h  IVariantObject.h  Image.h  Int32.h  Int64.h  LazyLoadPtr.h  Memory.h  Null.h  Numeric.h  RefCountPtr.h  RefCountPtrCast.h  String.h  TriState.h  UInt32.h  UInt64.h  Undefined.h  UnitTest.h  Variant.h  WeakReference.h  configwin32.h  stamp-h1  typeof.h  types.h
libspl/src/: Array.cpp  BackPropNeuralNetwork.cpp  BigInteger.cpp  BitMask.cpp  CDes.cpp  CLog.cpp  CommandLine.cpp  Compare.cpp  ConfigurationSection.cpp  ConfigurationSettings.cpp  Dates.cpp  Debug.cpp  Decimal.cpp  DelegateDispatch.cpp  DelimitedFile.cpp  DesStream.cpp  Directory.cpp  Environment.cpp  Exception.cpp  File.cpp  FileStream.cpp  GUID.cpp  Hashtable.cpp  IEnumerable.cpp  Image.cpp  InterlockCounter.cpp  Math.cpp  MemoryPool.cpp  Mutex.cpp  Null.cpp  Numeric.cpp  ObjectPool.cpp  Packet.cpp  Permissions.cpp  RSA.cpp  (+27 more)
libspljs/: .anjuta_sym_db.db  Doxyfile  Makefile  doxygen_footer.html  spljs.vcproj
libsplsqlite/: AUTHORS  ChangeLog  Makefile.am  README  TODO  TODO~  splsqlite.vcproj
libsplsqlite/.deps/: RunTestsMain-RunTestsMain.Po
libsplsqlite/examples/xsql/: xsql.cproj  xsql.sln
libsplsqlite/examples/xsql/docs/: classes.dia  classes.dia~  messages.dia  messages.dia~
libsplsqlite/examples/xsql/src/: ICommand.cpp  XSqlMessage.cpp  XSqlMessageListener.cpp  XSqlServer.cpp  XSqlUnitTests.cpp  xsqlmain.cpp
libsplsqlite/examples/xsql/src/sql/: ColumnName.cpp  IDML.cpp  ISelector.cpp  ISelectorAggregate.cpp  ISqlLex.cpp  SelectorAvg.cpp  SelectorColumn.cpp  SelectorCount.cpp  SelectorExpr.cpp  SelectorFunction.cpp  SelectorLiteral.cpp  SelectorNum.cpp  SelectorSum.cpp  SqlCreateProc.cpp  SqlCreateTable.cpp  SqlExpr.cpp  SqlFactory.cpp  SqlLex.cpp  SqlOperator.cpp  SqlSelect.cpp  SqlStmt.cpp  SqlSyntaxException.cpp
libsplsqlite/examples/xsql/src/test/: TestSqlLex.cpp  TestSqlSelect.cpp  TestXSql.cpp
libsplsqlite/examples/xsql/win32/: NtService.cpp  xsql.cbp  xsql.sln  xsql.vcproj
libsplsqlite/examples/xsql/win32/Debug/: BuildLog.htm  mt.dep  vc90.idb
libsplsqlite/examples/xsql/xsql/: ICommand.h  XSqlMessage.h  XSqlMessageListener.h  XSqlServer.h
libsplsqlite/examples/xsql/xsql/sql/: ColumnName.h  IDML.h  ISqlLex.h  SqlCreateProc.h  SqlCreateTable.h  SqlFactory.h  SqlLex.h  SqlSelect.h  SqlSyntaxException.h  SqlToken.h
libsplsqlite/examples/xsql/xsql/sql/dom/: ISelector.h  ISelectorAggregate.h  SelectorAvg.h  SelectorColumn.h  SelectorCount.h  SelectorExpr.h  SelectorFunction.h  SelectorLiteral.h  SelectorNum.h  SelectorSum.h  SqlExpr.h  SqlOperator.h  SqlStmt.h
libsplsqlite/spl/data/: SqlLiteCommand.h  SqlLiteConnection.h  SqliteCommand.h  SqliteConnection.h  SqlliteTransaction.h
libsplsqlite/src/: SqliteCommand.cpp  SqliteTransaction.cpp  SqlliteConnection.cpp  Thread.cpp~  UdpSocket.cpp~
libsplsqlite/src/data/: SqlLiteCommand.cpp  SqlLiteConnection.cpp  SqlLiteTransaction.cpp
libsplsqlite/src/sqlite/: sqlite3.c
libsplsqlite/test/: SqlLiteTest.cpp  TestTVector.cpp~  TestVarInterp.cpp~
libsplxml/: AUTHORS  LICENCE.TINYXML  Makefile.am~  splxml.vcproj
(+345 files in other folders)
